<resources>
    <string name="app_name">NOW SOPT Android</string>

    <!-- 로그인 페이지 -->
    <string name="tv_login_title">Welcome To SOPT</string>
    <string name="btn_login">로그인</string>

    <!-- 로그인 & 회원가입 페이지 -->
    <string name="tv_login_id">ID</string>
    <string name="et_login_id_hint">아이디를 입력해주세요</string>
    <string name="tv_login_pw">비밀번호</string>
    <string name="et_login_pw_hint">비밀번호를 입력해주세요</string>
    <string name="btn_signup">회원가입하기</string>

    <!-- 회원가입 페이지 -->
    <string name="tv_signup_title">SIGN UP</string>
    <string name="tv_signup_nickname">닉네임</string>
    <string name="et_signup_nickname_hint">닉네임을 입력해주세요</string>
    <string name="tv_signup_phone">전화번호</string>
    <string name="et_signup_phone_hint">010-0000-0000</string>

    <!-- 마이 페이지 -->
    <string name="tv_mypage_id">ID : </string>
    <string name="tv_mypage_phone">PHONE : </string>

    <!-- 홈 메뉴 -->
    <string name="menu_home">홈</string>
    <string name="menu_search">검색</string>
    <string name="menu_mypage">마이페이지</string>

    <!-- 로그인 메시지 -->
    <string name="login_success">로그인에 성공했습니다</string>
    <string name="login_fail">아이디와 비밀번호가 일치하지 않습니다</string>

    <!-- 회원가입 메시지 -->
    <string name="signup_success">회원가입에 성공했습니다!</string>
    <string name="signup_failed">회원가입에 실패했습니다</string>
    <string name="signup_id_fail">ID는 6자 이상, 10자 이하로 입력해주세요</string>
    <string name="signup_password_fail">비밀번호는 8자 이상, 12자 이하로 입력해주세요</string>
    <string name="signup_nickname_fail">닉네임을 입력해주세요</string>
    <string name="signup_phone_fail">전화번호를 입력해주세요</string>

    <!-- 서버 통신 -->
    <string name="server_connection_failed">서버 통신 에러</string>

</resources>